Fixed positioning to selected node BUG: now nothing is visible before first update (just in bottom left corner)

--- a/src/frontend/components/knalledgeMap/sass/default.scss
+++ b/src/frontend/components/knalledgeMap/sass/default.scss
@@ -321,8 +321,10 @@ $map: layout(12 1/4 fluid float inside);
 
 	.div_map{
 		position: relative;
-		width: 100%;
+/*		width: 100%;
 		height: 100%;
+*/
+		overflow: scroll;
 		/*background-color: #aaaaaa;*/
 		/*padding: 5px;*/
 	}
